chapter11/manifests/default-deny-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
  labels:
    chapter: chapter11
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
